k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    app: nginx
